fix scrollbar

--- a/source/scss/blocks/scrollbar.scss
+++ b/source/scss/blocks/scrollbar.scss
@@ -32,6 +32,7 @@
 
 .scroll-track-technical {
   margin-top: 0.5px;
+  border-left: 1px solid rgba(148, 187, 255, 0.5);
 }
 
 .scroll-thumb {
